--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,35 @@
-# Node modules
+# Node modules - never push these
+node_modules/
 frontend/node_modules/
 backend/node_modules/
 
-# Env files
+# Build outputs
+dist/
+build/
+frontend/build/
+backend/dist/
+
+# Environment variables - keep API keys secret
+.env
+.env.*        # like .env.local, .env.production etc.
+frontend/.env
 backend/.env
+
+# Log files
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# IDEs and editors
+.vscode/
+.idea/
+
+# Dependency lock files (optional)
+# Uncomment one of these depending on your package manager
+# package-lock.json
+# yarn.lock
